--- a/bwapp/public/bower.json
+++ b/bwapp/public/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "modernizr": "2.8.3",
     "fontawesome": "4.3.0",
-    "simple-line-icons": "0.1.1"
+    "simple-line-icons": "0.1.1",
+    "babylonjs": "2.0"
   }
 }
