--- a/bwapp/public/bower.json
+++ b/bwapp/public/bower.json
@@ -23,6 +23,7 @@
     "modernizr": "2.8.3",
     "fontawesome": "4.3.0",
     "simple-line-icons": "0.1.1",
-    "handjs": "*"
+    "handjs": "*",
+    "ng-circular-json": "*"
   }
 }
