--- a/bwapp/public/bower.json
+++ b/bwapp/public/bower.json
@@ -27,7 +27,12 @@
     "ng-circular-json": "*",
     "ngDialog": "0.3.11",
     "angular-datatables": "0.4.3",
-    "angularjs-toaster": "0.4.8"
+    "angularjs-toaster": "0.4.8",
+    "angular-cookies": "1.4.3",
+    "angular-route": "1.4.3",
+    "angular-animate": "1.4.3",
+    "angular-resource": "1.4.3",
+    "angular-sanitize": "1.4.3"
   },
   "resolutions": {
     "angular": ">=1.3.0"
