--- a/bwapp/public/bower.json
+++ b/bwapp/public/bower.json
@@ -32,7 +32,8 @@
     "angular-route": "1.4.3",
     "angular-animate": "1.4.3",
     "angular-resource": "1.4.3",
-    "angular-sanitize": "1.4.3"
+    "angular-sanitize": "1.4.3",
+    "angular-loading-bar": "0.8.0"
   },
   "resolutions": {
     "angular": ">=1.3.0"
