--- a/bwapp/public/bower.json
+++ b/bwapp/public/bower.json
@@ -33,7 +33,8 @@
     "angular-animate": "1.4.3",
     "angular-resource": "1.4.3",
     "angular-sanitize": "1.4.3",
-    "angular-loading-bar": "0.8.0"
+    "angular-loading-bar": "0.8.0",
+    "angular-md5": "0.1.8"
   },
   "resolutions": {
     "angular": ">=1.3.0"
