--- a/bwapp2/public/bower.json
+++ b/bwapp2/public/bower.json
@@ -28,6 +28,7 @@
     "angular-datatables": "0.4.3",
     "angularjs-toaster": "0.4.8",
     "ng-table": "*",
-    "lz-string": "*"
+    "lz-string": "*",
+    "ng-device-detector": "~2.0.2"
   }
 }
